# Prime

./: .gitignore  DEV_SPEC.md  README.md  pyproject.toml
.github/skills/auto-coder/: .spec_hash
.github/skills/auto-coder/references/: 01-overview.md  02-features.md  03-tech-stack.md  04-testing.md  05-architecture.md  06-schedule.md  07-future.md
config/: settings.yaml
scripts/: install-prime.ps1
src/prime/: __init__.py
src/prime/cli/: __init__.py  main.py
src/prime/routing/: __init__.py  session_router.py
tests/e2e/: test_exit.py  test_prime_console_script.py
tests/unit/: test_project_skeleton.py
tests/unit/cli/: test_main.py  test_repl.py
tests/unit/routing/: test_session_router.py
tests/unit/scripts/: test_install_prime_script.py
